modify: override layout

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Hemamalini Sundaram
 email: hemamalini.sundaram@gmail.com
 description: >-
-  A personal site powered by Jekyll and GitHub Pages.
+  A collection of stories and articles
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://hemamalinisundaram.github.io"
